--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        
+        <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
         <script src="./js/main.js" type="module"></script>
     </div>
 </body>
