[add] sync between tabs & final touch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container max-w-[1200px] px-[15px] mx-auto">
         <h1 class="text-bold text-5xl text-center">Car Dealership</h1>
         <div class="flex justify-end mb-4">
-            <button id="addButton" class="py-3 px-5 border bg-blue-600 rounded-[5px] border-none text-white">Add element</button>   
+            <button id="addButton" class="py-3 px-5 border bg-blue-600 hover:bg-blue-700 cursor-pointer rounded-[5px] border-none text-white">Add element</button>   
         </div>
         
         <ul id="list" class="grid grid-cols-4 gap-4 mt-4">       
