--- a/pages/addCard.html
+++ b/pages/addCard.html
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-slate-100 h-full flex items-center justify-center">
     <div class="container max-w-[1200px] px-[15px] mx-auto flex flex-col justify-center items-center min-h-screen">
-        <h1 class="text-center text-2xl font-bold mb-6">Add new Car</h1>
+        <h1 class="text-center text-4xl text-blue-800 font-bold mb-6">Add new Car</h1>
         <form id="addCarForm" class="w-full max-w-[500px]">
             <div class="grid gap-4 mb-6">
                 <div>
